Fixed bug that was making the pagination overlap a div

--- a/public/stylesheets/list.css
+++ b/public/stylesheets/list.css
@@ -265,9 +265,10 @@ ul.infoRow li{
 }
 
 #pagination{
+  clear:both;
 	text-align:center;
-	margin-top:9px;
 	margin-bottom:15px;
+	padding-top:10px;
 }
 
 #pagination a{
